--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "request": "^2.88.0",
     "rpi-gpio": "^2.1.5",
     "socket.io": "^2.3.0"
